--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="oops">Oops!</string>
     <string name="guild_not_found">Guild not found.</string>
+    <string name="empty_fields">Please, fill out all fields</string>
+
+    <!--GUILD MEMBERS-->
+    <string name="search">Search</string>
 </resources>
