--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">GuildBuddy</string>
+    <string name="app_label">Make your raids great again</string>
 
     <!--GENERAL MESSAGES-->
     <string name="oops">Oops!</string>
