change guild implemented; back button(aka up button) fragment navigation removed for better UX; menu added and implemente in RosterFragment.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 
     <!--GUILD MEMBERS-->
     <string name="search">Search</string>
+    <string name="change_guild">Change Guild</string>
 </resources>
